# cacha

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml  cicd.yaml  precommit.yaml
cacha/: __init__.py  hashing_tools.py  manager.py  version.py
cacha/tests/: pip_install_test.sh  test_data_structures.py  test_example.py  test_standard_usage.py  utils.py
cache_manager/: __init__.py  manager.py
cache_manager/tests/: test_example.py
src/cacha/: __init__.py  io.py  logging_utils.py  manager.py  version.py
src/cacha/store/: pickledb_store.py  store_interface.py
src/tests/: test_example.py  test_store.py  utils.py
src/tests/data/: test_data.csv  test_store.json
