[tool.poetry]
name = "cacha"
version = "0.1.0"
description = "A simple cache context manager for Data Scientists."

authors = ["Dawid Smoleń <smolendawid@gmail.com>"]

maintainers = ["Dawid Smoleń <smolendawid@gmail.com>"]

license = "Apache-2.0"

readme = "README.md"

homepage = "https://python-poetry.org/"
repository = "https://github.com/smolendawid/cache-manager"
documentation = ""

keywords = ["python", "cache", "data science"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = {version = "^1.4.3", optional = true}
pickleDB = "^0.9.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"
bandit = "^1.7.4"
pycodestyle = "^2.9.1"
pep8 = "^1.7.1"
autopep8 = "^1.6.0"
pydocstyle = "^6.1.1"
pytest = "^7.1.2"

[tool.poetry.extras]
pandas = ["pandas"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

